# operator

./: .dockerignore  .gitignore  .script-test.sh  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONSOLE-DEVELOPMENT-PLAN.md  CONSOLE-INTEGRATION-SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FAULT_INJECTION_TEST_PLAN.md  Justfile  Makefile  PR_DESCRIPTION.md  README.md  ROADMAP.md  SCRIPTS-UPDATE.md  build.rs  check-rustfs.sh  cleanup-rustfs-4node.sh  cleanup-rustfs.sh  deploy-rustfs-4node.sh  deploy-rustfs.sh  flake.nix
.claude/: settings.local.json
.cursor/rules/: NEW_PROJECT_REFERENCE.md
.cursor/skills/rustfs-operator-contribute/: SKILL.md
.gemini/: config.yml
.github/: AGENTS.md  CODEOWNERS  dependabot.yml  pull_request_template.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  docker.yml
console-web/: .dockerignore  .gitignore  .prettierrc  Dockerfile  README.md  components.json  eslint.config.mjs  next.config.ts  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml
console-web/.claude/: settings.local.json
console-web/app/: globals.css  layout.tsx
console-web/app/(auth)/: layout.tsx
console-web/app/(dashboard)/: layout.tsx  page.tsx
console-web/components/: auth-guard.tsx  language-switcher.tsx  page-header.tsx  page.tsx  theme-switcher.tsx
console-web/components/providers/: app-ui-provider.tsx  i18n-provider.tsx
console-web/components/ui/: button.tsx  card.tsx  dropdown-menu.tsx  spinner.tsx  table.tsx
console-web/contexts/: auth-context.tsx
console-web/i18n/locales/: en-US.json  zh-CN.json
console-web/lib/: api-client.ts  api.ts  config.ts  i18n.ts  routes.ts  tenant-state.ts  utils.ts
console-web/lib/mocks/: topology.ts
console-web/types/: api.ts  auth.ts  topology.ts
crates/leader-election/: Cargo.toml  README.md
crates/leader-election/src/: callbacks.rs  clock.rs  config.rs  elector.rs  error.rs  lib.rs  metrics.rs  observed.rs  record.rs  state.rs
crates/leader-election/src/lock/: lease.rs  mod.rs
crates/leader-election/tests/: integration_tests.rs
crdyaml/: tenant-crd.yaml
deploy/: README.md
deploy/console/: KUBERNETES-INTEGRATION.md  README.md
deploy/console/examples/: ingress-tls-example.md  loadbalancer-example.md
deploy/k8s-dev/: console-deployment.yaml  console-frontend-deployment.yaml  console-frontend-service.yaml  console-rbac.yaml  console-service.yaml  operator-deployment.yaml  operator-metrics-service.yaml  operator-rbac.yaml  operator-sts-service.yaml
deploy/kind/: kind-rustfs-cluster.yaml
deploy/rustfs-operator/: Chart.yaml  README.md  values.yaml
deploy/rustfs-operator/crds/: crd.yaml  policybinding-crd.yaml  tenant-crd.yaml  tenant.yaml
deploy/rustfs-operator/examples/: multi-pool-tenant.yaml  simple-tenant.yaml
deploy/rustfs-operator/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  console-clusterrole.yaml  console-clusterrolebinding.yaml  console-deployment.yaml  console-frontend-deployment.yaml  console-frontend-service.yaml  console-ingress.yaml  console-secret.yaml  console-service.yaml  console-serviceaccount.yaml  console-servicemonitor.yaml  deployment.yaml  operator-metrics-service.yaml  operator-sts-service.yaml  prometheusrule.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: DEVELOPMENT-NOTES.md  DEVELOPMENT.md  POOL-STATUS-EXPLANATION.md  RUSTFS-K8S-INTEGRATION.md  RUSTFS-OBJECT-STORAGE-USAGE.md  architecture-decisions.md  multi-pool-use-cases.md  operator-user-guide.md  operator-user-guide.zh-CN.md  prd-tenant-events-sse.md  tech-design-tenant-events-sse.md
e2e/: Cargo.toml  FAULT_INJECTION_TEST_PLAN.md  FAULT_TESTING.md  Makefile  README.md
e2e/manifests/: kind-rustfs-e2e.yaml
e2e/scripts/: fault-test.sh
e2e/src/: lib.rs
e2e/src/cases/: cert_manager_tls.rs  console.rs  faults.rs  mod.rs  operator.rs  smoke.rs  sts.rs
e2e/src/fault/: checker.rs  config.rs  fixture.rs  mod.rs  plan.rs  runner.rs  scenarios.rs  workload.rs
e2e/src/fault/backends/: chaos_mesh.rs  host.rs
e2e/src/framework/: artifacts.rs  assertions.rs  cert_manager_tls.rs  chaos_mesh.rs  checker.rs  command.rs  config.rs  console_client.rs  deploy.rs  fault_config.rs  fault_plan.rs  fault_scenarios.rs  history.rs  host_faults.rs  images.rs  kind.rs  kube_client.rs  kubectl.rs  live.rs  mod.rs  port_forward.rs  resources.rs  s3_workload.rs  storage.rs  tenant_factory.rs  tools.rs  wait.rs
e2e/tests/: cert_manager_tls.rs  console.rs  faults.rs  operator.rs  smoke.rs  sts_functional.rs  sts_manifest.rs
examples/: README.md  cert-manager-ca-trust-tenant.yaml  cluster-expansion-tenant.yaml  custom-rbac-tenant.yaml  geographic-pools-tenant.yaml  hardware-pools-tenant.yaml  minimal-dev-tenant.yaml  multi-pool-tenant.yaml  production-ha-tenant.yaml  provisioning-tenant.yaml  secret-credentials-tenant.yaml  simple-tenant.yaml  spot-instance-tenant.yaml  tenant-4nodes.yaml
issues/: 01-secret-based-credentials.md  02-status-condition-management.md  03-statefulset-reconciliation.md
scripts/: README.md
scripts/check/: check-rustfs.sh
scripts/cleanup/: cleanup-rustfs-4node.sh  cleanup-rustfs.sh
scripts/deploy/: deploy-rustfs-4node.sh  deploy-rustfs.sh
scripts/test/: script-test.sh
src/: context.rs  error.rs  error_policy.rs  lib.rs  main.rs  metrics.rs  reconcile.rs  status.rs  tenant_monitor.rs  tests.rs  types.rs  utils.rs
src/console/: error.rs  mod.rs  openapi.rs  server.rs  state.rs  tenant_event_scope.rs
src/console/handlers/: auth.rs  cluster.rs  encryption.rs  events.rs  mod.rs  pods.rs  pools.rs  security_context.rs  tenants.rs  topology.rs
src/console/middleware/: auth.rs  mod.rs
src/console/models/: auth.rs  cluster.rs  common.rs  (+7 more)
src/reconcile/: certificate.rs  phases.rs  pool.rs  pool_lifecycle.rs  provisioning.rs  service.rs  service_account.rs  tls.rs
src/sts/: admin_ops.rs  binding.rs  core_ops.rs  error.rs  helpers.rs  mod.rs  pool_ops.rs  rustfs_client.rs  s3_ops.rs  server.rs  session_policy.rs  sts_ops.rs  tests.rs  tls.rs  token_review.rs  types.rs
src/types/: error.rs  v1alpha1.rs
src/utils/: tls.rs
(+28 files in other folders)
