[package]
name = "operator"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/rustfs/operator"
license = "Apache-2.0"
homepage = "https://rustfs.com"


[dependencies]
chrono = "0.4"
const-str = "0.7.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "fs", "io-std", "io-util"] }
futures = "0.3.31"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde_json = "1.0.147"
serde_yaml_ng = "0.10.0"
strum = { version = "0.27.2", features = ["derive"] }
k8s-openapi = { version = "0.26.1", features = ["v1_30", "schemars"] }
kube = { version = "2.0.1", features = ["runtime", "derive", "client", "rustls-tls"] }
schemars = "1"
clap = { version = "4.5.53", features = ["derive"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2.2.0"
shadow-rs = "1.5.0"
snafu = { version = "0.8.9", features = ["futures"] }

[dev-dependencies]

[build-dependencies]
shadow-rs = { version = "1.5.0", features = ["build"] }

[lints.rust]
unused_variables = "allow"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"