[package]
name = "operator"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/rustfs/operator"
license = "Apache-2.0"
homepage = "https://rustfs.com"


[dependencies]
chrono = { version = "0.4", features = ["serde"] }
const-str = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "fs", "io-std", "io-util"] }
tokio-rustls = "0.26"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io", "compat", "rt"] }
futures = "0.3.31"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde_json = "1.0.148"
serde_yaml_ng = "0.10.0"
strum = { version = "0.28.0", features = ["derive"] }
k8s-openapi = { version = "0.26.1", features = ["v1_30", "schemars"] }
kube = { version = "3.1.0", features = ["runtime", "derive", "client", "rustls-tls"] }
schemars = "1"
clap = { version = "4.5.54", features = ["derive"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2.2.0"
webpki = { package = "rustls-webpki", version = "0.103" }
rcgen = "0.14"
sha2 = "0.11"
hmac = "0.13"
hex = "0.4"
base64 = "0.22"
ring = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2.5"
shadow-rs = "2.0.0"
snafu = { version = "0.9.1", features = ["futures"] }
kube-leader-election = { path = "crates/leader-election" }
hostname = "0.4"

# Console dependencies
axum = { version = "0.8", features = ["macros", "json"] }
hyper = "1"
hyper-util = { version = "0.1", features = ["server-auto", "service", "tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
http = "1.2"
utoipa = { version = "5", features = ["chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
async-trait = { version = "0.1.89", default-features = false }

[dev-dependencies]

[build-dependencies]
shadow-rs = { version = "2.0.0", features = ["build"] }

[lints.rust]
unused_variables = "allow"

[workspace]
members = ["crates/leader-election"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
