[package]
name = "rustfs-operator-e2e"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
operator = { path = ".." }

anyhow = "1"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml_ng = "0.10.0"
tempfile = "3"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "process", "time", "io-util"] }
uuid = { version = "1", features = ["v4"] }

k8s-openapi = { version = "0.26.1", features = ["v1_30", "schemars"] }
kube = { version = "2.0.1", features = ["runtime", "derive", "client", "rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "rustls-tls", "stream"] }
