[package]
name = "kube-leader-election"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Kubernetes leader election for RustFS Operator"

[dependencies]
async-stream = "0.3"
async-trait = { version = "0.1.89", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
k8s-openapi = { version = "0.26.1", features = ["v1_30"] }
kube = { version = "4.0.0", features = ["client", "rustls-tls"] }
rand = "0.10"
snafu = { version = "0.9.1", features = ["futures"] }
tokio = { version = "1.49.0", features = ["sync", "time", "macros", "rt"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1.44"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
